[gd_scene load_steps=4 format=3 uid="uid://c6jidt0j7dtmu"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_6a50f"]
[ext_resource type="Texture2D" uid="uid://7l3y80e8ltro" path="res://assets/homescreen.png" id="2_jgwuj"]
[ext_resource type="PackedScene" uid="uid://d0jotk8mcuwdc" path="res://scenes/Music.tscn" id="3_eepy8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6a50f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-512, -256)
scale = Vector2(2.064, 2.08)
texture = ExtResource("2_jgwuj")
centered = false
metadata/_edit_lock_ = true

[node name="Chaos" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 48.0
offset_right = 268.0
offset_bottom = 136.0

[node name="Chaos Button" type="Button" parent="Chaos"]
layout_mode = 2
disabled = true
text = "Chaos (Soon)"

[node name="Label" type="Label" parent="Chaos"]
layout_mode = 2
text = "Craft precisely or fail."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Daily Challenge" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 284.0
offset_top = -112.0
offset_right = 492.0
offset_bottom = -24.0

[node name="Daily Button" type="Button" parent="Daily Challenge"]
layout_mode = 2
text = "Daily"

[node name="Label" type="Label" parent="Daily Challenge"]
layout_mode = 2
text = "Compete with friends to craft the gem with the minimum experiments."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Puzzle Mode" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 56.0
offset_top = -112.0
offset_right = 264.0
offset_bottom = -24.0

[node name="Puzzle Button" type="Button" parent="Puzzle Mode"]
layout_mode = 2
text = "Puzzle"

[node name="Label" type="Label" parent="Puzzle Mode"]
layout_mode = 2
text = "Craft the gem to advance to the next level."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Speed Mode" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 284.0
offset_top = 48.0
offset_right = 492.0
offset_bottom = 158.0

[node name="Speed Button" type="Button" parent="Speed Mode"]
layout_mode = 2
disabled = true
text = "Speed (Soon!)"

[node name="Label" type="Label" parent="Speed Mode"]
layout_mode = 2
text = "Craft gems before time runs out."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Author" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = -168.0
offset_right = 197.0
offset_bottom = -145.0
theme_override_font_sizes/font_size = 14
text = "By Travis Bumgarner"

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = -216.0
offset_right = 273.0
offset_bottom = -161.0
theme_override_font_sizes/font_size = 40
text = "Candlelight"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 76.0
offset_top = 192.0
offset_right = 492.0
offset_bottom = 232.0
alignment = 2

[node name="Tutorial" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "Tutorial (Soon!)"

[node name="Options2" type="Button" parent="HBoxContainer"]
layout_mode = 2
disabled = true
text = "Options (Soon!)"

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = -240.0
offset_right = 492.0
offset_bottom = -139.0
theme_override_colors/font_color = Color(0.662745, 0.705882, 0.690196, 1)
text = "Instructions"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = -208.0
offset_right = 492.0
offset_bottom = -128.0
theme_override_colors/font_color = Color(0.664348, 0.704912, 0.689619, 1)
theme_override_font_sizes/font_size = 11
text = "Place Piece - Spacebar
Move - W, A, S, D
Rotate - R
Undo - X
"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("3_eepy8")]

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = -196.0
offset_top = 240.0
offset_right = 93.0
offset_bottom = 263.0
theme_override_colors/font_color = Color(0.617455, 0.617455, 0.617455, 1)
theme_override_font_sizes/font_size = 11
text = "Thanks to WELC0MEÐ˜0 for the music."

[connection signal="pressed" from="Chaos/Chaos Button" to="." method="_on_chaos_button_pressed"]
[connection signal="pressed" from="Daily Challenge/Daily Button" to="." method="_on_daily_button_pressed"]
[connection signal="pressed" from="Puzzle Mode/Puzzle Button" to="." method="_on_puzzle_button_pressed"]
[connection signal="pressed" from="Speed Mode/Speed Button" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Tutorial" to="." method="_on_speed_mode_pressed"]
[connection signal="pressed" from="HBoxContainer/Tutorial" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/Options2" to="." method="_on_speed_mode_pressed"]
[connection signal="pressed" from="HBoxContainer/Options2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_speed_mode_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
